<resources>
    <string name="app_name">NearDoc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">Or</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="not_connected_internet">You\'re not connected to Wi-Fi</string>
    <string name="settings">Settings</string>
    <string name="using_wifi">Using Wi-Fi</string>
    <string name="using_mobile_data">Switched to mobile data</string>
    <string name="username_is_required">Username is required.</string>
    <string name="invalid_username">Username must be 3 to 12 characters with lowercase, digits and symbols(_-) only.</string>
    <string name="passowrd_required">Password cannot be empty.</string>
    <string name="invalid_password">Password must be at least 6 to 20 characters with at least one digit from 0-9,
        one uppercase and lowercase character and one special character from the list "@.#$%"</string>
    <string name="email_is_required">Email is required.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="name_required">Please enter your name</string>
    <string name="username_exists">This username already exists</string>
    <string name="email_exists">The email address is already in use by another account</string>
    <string name="verify_email">Verify your email</string>
    <string name="email_inbox">Open Inbox</string>
    <string name="email_not_verified">Email is not verified</string>
    <string name="email_resend">Resend</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="request_reset_link">Request reset link</string>
    <string name="login_invalid_password">The password is invalid or the user does not have a password</string>
    <string name="email_not_found">User not found</string>
    <string name="error_sending_password_reset_link">Failed to send password reset link</string>
    <string name="password_link_sent">Password link sent to</string>
    <string name="choose_email_provider">Choose your email provider</string>
    <string name="no_email_app_found">No apps found to perform this action</string>
    <string name="server_error">Server is under maintenance. We\'re Sorry for the inconvenience. Please try again later.</string>
    <string name="no_internet">No internet connectivity. Please connect to internet.</string>
    <string name="location_permission_denied">NearDoc depends on location permission. Disabling access to device location will cause unexpected behavior.</string>
    <string name="enable_location_permission">Enable</string>
    <string name="search_doc">DOC</string>
    <string name="account">Account</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="menu">MENU</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="general">GENERAL</string>
    <string name="sign_in_security"><![CDATA[Sign in & security]]></string>
    <string name="set_distance">Set Distance</string>
    <string name="limit">Limit</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_neardoc">Rate NearDoc</string>
    <string name="terms_condition"><![CDATA[Terms & Conditioin]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_login_information">Update Login Information</string>
    <string name="name_of_user">Name</string>
    <string name="header">Header</string>
    <string name="masking">*********</string>
    <string name="delete">Delete</string>
    <string name="change">SUBMIT</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_email">New Email</string>
    <string name="email_update_success">Email updated successfully</string>
    <string name="update_email_failed">Failed to update email. Please try again.</string>
    <string name="password_updated">Password is updated successfully.</string>
    <string name="sign_in_again">You have updated your email recently. Please sign in again</string>
    <string name="too_many_login_attempt">Too many unsuccessful login attempts. Please try again later.</string>
    <string name="multiple_login_error_message_long">We have blocked all requests from this device due to unusual activity. Try again later. [ Too many unsuccessful login attempts.  Please include reCaptcha verification or try again later ]</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete_account">Are you sure? All your information will be deleted!</string>
    <string name="enter_password">Please enter your password</string>
    <string name="delete_success">Sorry to see you go, hope to see you soon </string>
    <string name="google_user_cannot_update">You cannot update google account information from NearDoc. Sorry for any inconvenient.</string>
    <string name="must_update_password">You must update your password to avoid unexpected behavior. Thank you.</string>
    <string name="search_radius">Search doctor within raidus</string>
    <string name="set_limit">Set limit</string>
    <string name="search_limit">Result to get back when search for doctors</string>
    <string name="no_user_found">There is on user record corresponding to this identifier.</string>
    <string name="location">Location</string>
    <string name="room_temperature">Room Temperature</string>
    <string name="let_s_do_breathing_exercises">Let\'s do breathing exercises!</string>
    <string name="start">Start</string>
    <string name="breath">Breath</string>
    <string name="inhale_exhale">Inhale…Exhale</string>
    <string name="good_job">Good Job!</string>
    <string name="your_progress">Your Progress:</string>
    <string name="breath_50_times_to_unlock_heart_rate"><u>Do 50 sets to unlock heart rate!</u></string>
    <string name="increase_breath_count_for_next_round"><u>Increase breath count for next round</u></string>
    <string name="home">HOME</string>
    <string name="state">State</string>
    <string name="notification">Notifications</string>
    <string name="_2000_steps_taken">2000 Steps taken</string>
    <string name="weight_in_pound">Weight in pound</string>
    <string name="height_in_inch">Height in inch</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="step_count_service_start_message">Let NearDoc calculate my steps all the time?</string>
    <string name="step_count_chanel_name">Regular Step Count</string>
    <string name="step_count_chanel_name_foreground">Step count foreground service</string>
    <string name="step_count_foreground_chanel_desc">Turn on to indicate NearDoc is calculating your steps.</string>
    <string name="foreground_step_count_running_message">Step count running. Tap to open.</string>
    <string name="turn_on_step_count_notification_message">Turn on to get notification about how much calories you burn every day.</string>
    <string name="stop_step_counter">Stop NearDoc Step Counter</string>
    <string name="heart_beat_result">---</string>
    <string name="doctors_name">Doctors Name</string>
    <string name="doc_description">Description</string>
    <string name="doc_distance">Distance</string>
    <string name="distance_result_in_meater">1.5 mi</string>
    <string name="navtype_google">Google</string>
    <string name="navtype_waze">Waze</string>
    <string name="always_use_waze">Always use Waze</string>
    <string name="always_use_google">Always use Google</string>
    <string name="doc_speciality">Speciality</string>
    <string name="bio">Biography</string>
    <string name="insurances">Insurances</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="random_text">Biodfsdfadfasdfasdfasdfadsfasddfasdfasdfasdfadsfadsfafasdfdsafsda</string>
    <string name="business_affiliation">Affiliations</string>
    <string name="phone_number">000-000-0000</string>
    <string name="phoneType">Type</string>
    <string name="navigate">Navigate</string>
    <string name="insurance_plan">Insurance Plan</string>
    <string name="insurance_provider">Insurance Provider</string>
    <string name="data_is_not_available">Data is not available</string>
    <string name="search_doctors">Search Doctors</string>
    <string name="doctor_details">Doctor\'s Details</string>

</resources>
