<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuSettingId"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_blue_gray600_24dp"
        />
    <item
        android:id="@+id/menuFeedbackId"
        android:title="@string/feedback"
        android:icon="@drawable/ic_feedback_gray_blue600_24dp"
        />
    <item
        android:id="@+id/menuHelpId"
        android:title="@string/help"
        android:icon="@drawable/ic_help_blue_gray600_24dp"
        />
    <item
        android:id="@+id/menuSignOutId"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_sign_out_blue_gray600_24dp"
        />
</menu>