<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_sign_in_security_item_container_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_sign_in_sec_name_title_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="24sp"
                android:textColor="@color/blue_gray_400"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_sign_in_sec_name_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/name_of_user"
                android:textColor="@color/blue_gray_400"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_sign_in_sec_item_sub_container_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:id="@+id/fragment_sign_in_sec_username_holder_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_in_sec_item_username_title_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textColor="@color/blue_gray_400"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/fragment_sign_in_sec_item_username_icon_id"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/fragment_sign_in_sec_item_username_icon_id" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_in_sec_item_username_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_sign_in_sec_item_username_title_view_id"
                    android:text="@string/username"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/blue_gray_400"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fragment_sign_in_sec_item_username_icon_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_gray600_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue_gray_100"
                android:layout_marginTop="4dp"
                />
            <RelativeLayout
                android:id="@+id/fragment_sign_in_sec_password_holder_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_in_sec_item_password_title_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="18sp"
                    android:textColor="@color/blue_gray_400"
                    android:layout_toStartOf="@+id/fragment_sign_in_sec_item_password_icon_id"
                    android:layout_toLeftOf="@+id/fragment_sign_in_sec_item_password_icon_id"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_in_sec_item_password_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_sign_in_sec_item_password_title_view_id"
                    android:text="@string/masking"
                    android:textColor="@color/blue_gray_400"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fragment_sign_in_sec_item_password_icon_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_gray600_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>