<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ForgotPassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dr_background"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_forgot_password_go_back_bt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_margin="16dp"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_forgot_password_app_logo_id"
            android:layout_width="@dimen/splash_image_dimen"
            android:layout_height="@dimen/splash_image_dimen"
            android:src="@drawable/heart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:tint="@android:color/white"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_forgot_password_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:fontFamily="@font/chonburi"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:layout_below="@+id/fragment_forgot_password_app_logo_id"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forgot_password_email_input_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/email"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="@android:color/white"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_forg_password_email_edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_forgot_password_reset_bt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_forgot_password_email_input_layout_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/request_reset_link"
            style="@style/Widget.MaterialComponents.Button"
            app:rippleColor="@color/blue_gray_400"
            app:backgroundTint="@color/white"
            android:textColor="@color/blue_gray_700"
            app:cornerRadius="20dp"
            android:textStyle="bold"
            />
        <include android:id="@+id/fragment_forgot_password_progress_bar_id"
            layout="@layout/global_progress_bar_layout"
            android:visibility="gone"
            />
    </RelativeLayout>
</layout>
