<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/breathing_result_title_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/good_job"
        android:textSize="24sp"
        android:fontFamily="@font/baloo_bhai"
        android:textColor="@color/blue_gray_400"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/breathing_result_sub_title_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/breathing_result_title_view_id"
        android:text="@string/breath_50_times_to_unlock_heart_rate"
        android:textColor="@color/blue_gray_400"
        android:textSize="18sp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/breathing_result_total_breath_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breathing_result_sub_title_view_id"
        android:text="Time breath"
        android:textColor="@color/blue_gray_400"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/padding_16dp"
        android:layout_centerHorizontal="true"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/breathing_result_last_breath_date_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breathing_result_total_breath_view_id"
        android:text="Last 12:00 PM"
        android:textSize="16sp"
        android:textColor="@color/blue_gray_400"
        android:layout_centerHorizontal="true"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/breathing_result_set_count_title_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/breathing_result_last_breath_date_view_id"
        android:text="@string/increase_breath_count_for_next_round"
        android:layout_marginTop="@dimen/padding_16dp"
        android:textColor="@color/blue_gray_400"
        android:textSize="18sp"
        />
    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/breathing_result_set_repeat_count_seek_bar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        app:duration="@android:integer/config_mediumAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:size="small"
        android:layout_below="@+id/breathing_result_last_breath_date_view_id"
        android:layout_marginTop="8dp"
        />
    <LinearLayout
        android:id="@+id/breathing_result_action_bt_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/breathing_result_set_repeat_count_seek_bar_id"
        android:layout_marginTop="@dimen/padding_16dp"
        android:gravity="end"
        android:padding="@dimen/padding_16dp"
        android:layout_centerHorizontal="true"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/breathing_result_ok_bt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            android:textColor="@color/blue_gray_400"
            android:text="@android:string/ok"
            app:rippleColor="@color/blue_gray_400"
            />
    </LinearLayout>
</RelativeLayout>